src/main/java/org/example/dip/correct/SlackNotifierService.java
package org.example.dip.correct;

public class SlackNotifierService implements INotifierService {
    @Override
    public void sendMessage(String to, String message) {
        // TODO
    }
}
