src/main/java/org/example/dip/bad/SlackNotifierService.java
package org.example.dip.bad;

public class SlackNotifierService {

    public void sendMessage(final String to, final String message) {
        // Implementation to send message according to parameters.
    }
}
